--- a/PasswordChecker/test-output/emailable-report.html
+++ b/PasswordChecker/test-output/emailable-report.html
@@ -9,20 +9,58 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">11</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,313</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">15</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">5,366</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="11">com.agoda.PasswordChangeTestNG</td><td><a href="#m0">passwordWithAllDigits</a></td><td rowspan="1">1560819853014</td><td rowspan="1">26</td></tr><tr class="passedeven"><td><a href="#m1">passwordWithAllSpecialChars</a></td><td rowspan="1">1560819853040</td><td rowspan="1">16</td></tr><tr class="passedeven"><td><a href="#m2">passwordWithLessThan17Characters</a></td><td rowspan="1">1560819853056</td><td rowspan="1">16</td></tr><tr class="passedeven"><td><a href="#m3">passwordWithMoreThan50PercenOfDigits</a></td><td rowspan="1">1560819853072</td><td rowspan="1">15</td></tr><tr class="passedeven"><td><a href="#m4">passwordWithNoDigits</a></td><td rowspan="1">1560819853087</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m5">passwordWithNoLowerCase</a></td><td rowspan="1">1560819853087</td><td rowspan="1">16</td></tr><tr class="passedeven"><td><a href="#m6">passwordWithNoUpperCase</a></td><td rowspan="1">1560819853103</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m7">passwordWithNotAllowdedSpecialChars</a></td><td rowspan="1">1560819853103</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m8">passwordWithSpecialCharsMoreThan4</a></td><td rowspan="1">1560819853103</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m9">passwordWithWrongSystemPassword</a></td><td rowspan="1">1560819853119</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m10">validpasswordTest</a></td><td rowspan="1">1560819853119</td><td rowspan="1">15</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.agoda.PasswordChangeTestNG</td><td><a href="#m0">inValidPreviouspasswordTest</a></td><td rowspan="1">1561508872269</td><td rowspan="1">0</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="15">com.agoda.PasswordChangeTestNG</td><td><a href="#m1">dataProviderTestWithNegativeConditions</a></td><td rowspan="2">1561508872213</td><td rowspan="2">25</td></tr><tr class="passedeven"><td><a href="#m2">dataProviderTestWithNegativeConditions</a></td></tr><tr class="passedeven"><td><a href="#m3">emptynewPassword</a></td><td rowspan="1">1561508872254</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m4">passwordWithAllDigits</a></td><td rowspan="1">1561508872269</td><td rowspan="1">16</td></tr><tr class="passedeven"><td><a href="#m5">passwordWithAllSpecialChars</a></td><td rowspan="1">1561508872285</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m6">passwordWithLessThan17Characters</a></td><td rowspan="1">1561508872300</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m7">passwordWithMoreThan50PercenOfDigits</a></td><td rowspan="1">1561508872300</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m8">passwordWithNoDigits</a></td><td rowspan="1">1561508872316</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m9">passwordWithNoLowerCase</a></td><td rowspan="1">1561508872316</td><td rowspan="1">16</td></tr><tr class="passedeven"><td><a href="#m10">passwordWithNoUpperCase</a></td><td rowspan="1">1561508872332</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m11">passwordWithNotAllowdedSpecialChars</a></td><td rowspan="1">1561508872347</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m12">passwordWithSpecialCharsMoreThan4</a></td><td rowspan="1">1561508872363</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m13">passwordWithWrongSystemPassword</a></td><td rowspan="1">1561508872363</td><td rowspan="1">0</td></tr><tr class="passedeven"><td><a href="#m14">passwordWithsimilarity</a></td><td rowspan="1">1561508872363</td><td rowspan="1">16</td></tr><tr class="passedeven"><td><a href="#m15">validpasswordTest</a></td><td rowspan="1">1561508872379</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.agoda.PasswordChangeTestNG#passwordWithAllDigits</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.agoda.PasswordChangeTestNG#passwordWithAllSpecialChars</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.agoda.PasswordChangeTestNG#passwordWithLessThan17Characters</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.agoda.PasswordChangeTestNG#passwordWithMoreThan50PercenOfDigits</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.agoda.PasswordChangeTestNG#passwordWithNoDigits</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.agoda.PasswordChangeTestNG#passwordWithNoLowerCase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.agoda.PasswordChangeTestNG#passwordWithNoUpperCase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.agoda.PasswordChangeTestNG#passwordWithNotAllowdedSpecialChars</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">com.agoda.PasswordChangeTestNG#passwordWithSpecialCharsMoreThan4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">com.agoda.PasswordChangeTestNG#passwordWithWrongSystemPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">com.agoda.PasswordChangeTestNG#validpasswordTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.agoda.PasswordChangeTestNG#inValidPreviouspasswordTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: did not expect to find [true] but found [false]
+	at org.testng.Assert.fail(Assert.java:97)
+	at org.testng.Assert.failNotEquals(Assert.java:969)
+	at org.testng.Assert.assertTrue(Assert.java:43)
+	at org.testng.Assert.assertTrue(Assert.java:53)
+	at com.agoda.PasswordChangeTestNG.inValidPreviouspasswordTest(PasswordChangeTestNG.java:35)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
+	at java.lang.reflect.Method.invoke(Unknown Source)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:131)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:570)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:170)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:790)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:143)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+	at org.testng.TestRunner.privateRun(TestRunner.java:763)
+	at org.testng.TestRunner.run(TestRunner.java:594)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:398)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:392)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:355)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:304)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1146)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1067)
+	at org.testng.TestNG.runSuites(TestNG.java:997)
+	at org.testng.TestNG.run(TestNG.java:965)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.agoda.PasswordChangeTestNG#dataProviderTestWithNegativeConditions</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td> </td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.agoda.PasswordChangeTestNG#dataProviderTestWithNegativeConditions</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>qwerty@A45sssss6*kladaedef</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.agoda.PasswordChangeTestNG#emptynewPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.agoda.PasswordChangeTestNG#passwordWithAllDigits</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.agoda.PasswordChangeTestNG#passwordWithAllSpecialChars</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.agoda.PasswordChangeTestNG#passwordWithLessThan17Characters</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.agoda.PasswordChangeTestNG#passwordWithMoreThan50PercenOfDigits</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">com.agoda.PasswordChangeTestNG#passwordWithNoDigits</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">com.agoda.PasswordChangeTestNG#passwordWithNoLowerCase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">com.agoda.PasswordChangeTestNG#passwordWithNoUpperCase</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">com.agoda.PasswordChangeTestNG#passwordWithNotAllowdedSpecialChars</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m12">com.agoda.PasswordChangeTestNG#passwordWithSpecialCharsMoreThan4</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m13">com.agoda.PasswordChangeTestNG#passwordWithWrongSystemPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m14">com.agoda.PasswordChangeTestNG#passwordWithsimilarity</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m15">com.agoda.PasswordChangeTestNG#validpasswordTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
